--- a/stylesheets/_gallery.scss
+++ b/stylesheets/_gallery.scss
@@ -1,15 +1,4 @@
 .gallery {
-	flex-wrap: wrap;
-	justify-content: space-between;
+	//gallery CSS goes here
 
-	&__item {
-		width: calc(25% - 12px);
-		flex: 0 0 auto;
-		margin-bottom: 13px;
-
-		div {
-			background-color: var(--tertiary-color);
-			padding-bottom: 56.25%;
-		}
-	}
 }
