--- a/stylesheets/_gallery.scss
+++ b/stylesheets/_gallery.scss
@@ -9,91 +9,91 @@
 		margin-bottom: 13px;
 
 		&:nth-child(1) {
-			background-image: url("../images/01.jpg");
+			background-image: url("../images/cat1.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(2) {
-			background-image: url("../images/02.jpg");
+			background-image: url("../images/cat2.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(3) {
-			background-image: url("../images/03.jpg");
+			background-image: url("../images/cat3.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(4) {
-			background-image: url("../images/04.jpg");
+			background-image: url("../images/cat4.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(5) {
-			background-image: url("../images/05.jpg");
+			background-image: url("../images/cat5.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(6) {
-			background-image: url("../images/06.jpg");
+			background-image: url("../images/cat6.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(7) {
-			background-image: url("../images/07.jpg");
+			background-image: url("../images/cat7.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(8) {
-			background-image: url("../images/08.jpg");
+			background-image: url("../images/cat8.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(9) {
-			background-image: url("../images/09.jpg");
+			background-image: url("../images/cat9.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(10) {
-			background-image: url("../images/10.jpg");
+			background-image: url("../images/dogs.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(11) {
-			background-image: url("../images/11.jpg");
+			background-image: url("../images/cat1.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(12) {
-			background-image: url("../images/12.jpg");
+			background-image: url("../images/cat2.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 		
 		&:nth-child(13) {
-			background-image: url("../images/13.jpg");
+			background-image: url("../images/cat3.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(14) {
-			background-image: url("../images/14.jpg");
+			background-image: url("../images/cat4.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
 
 		&:nth-child(15) {
-			background-image: url("../images/15.jpg");
+			background-image: url("../images/cat5.jpg");
 			background-position: center;
 			background-size: 100%;
 		}
