--- a/stylesheets/_gallery.scss
+++ b/stylesheets/_gallery.scss
@@ -9,7 +9,14 @@
   background-color: var(--tertiary-color);
   margin-bottom: 12px;
   filter: grayscale(100%);
+  transition: all .2s ease-in-out;
+  overflow: hidden;
+  cursor: pointer;
 
+  &:hover {
+    filter: grayscale(0);
+    background-size: 102%;
+  }
 
 
   &:nth-child(1){
