--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -2,6 +2,7 @@
 	--primary-color: #000000;
 	--secondary-color: #FFFFFF;
 	--tertiary-color: #FF5D73;
-	--title-font: 'Roboto Mono', monospace;
-	--copy-font: 'Roboto', sans-serif;
+	--main-color: #3C72A0;
+	--gallery-color: #D6F4FF;
+	--title-font: 'Cormorant Garamond', serif;
 }
