--- a/style.scss
+++ b/style.scss
@@ -4,3 +4,7 @@
 @import 'stylesheets/page-title';
 @import 'stylesheets/description';
 @import 'stylesheets/gallery';
+@import 'stylesheets/mixins';
+@import 'stylesheets/modal';
+@import 'stylesheets/container-small';
+@import 'stylesheets/container-tiny';
