--- a/stylesheets/_description.scss
+++ b/stylesheets/_description.scss
@@ -1,4 +1,5 @@
 .description {
-	font-size: 3.2em;
-	font-family: var(--copy-font);
+	font-size: 2em;
+	font-family: var(--title-font);
+	margin-top: -40px;
 }
