--- a/stylesheets/_gallery.scss
+++ b/stylesheets/_gallery.scss
@@ -20,121 +20,121 @@
 
 
   &:nth-child(1){
-    background-image: url("../images/01.jpg");
+    background-image: url("../images/img01.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(2){
-    background-image: url("../images/02.jpg");
+    background-image: url("../images/img02.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(3){
-    background-image: url("../images/03.jpg");
+    background-image: url("../images/img03.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(4){
-    background-image: url("../images/04.jpg");
+    background-image: url("../images/img04.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(5){
-    background-image: url("../images/05.jpg");
+    background-image: url("../images/img05.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(6){
-    background-image: url("../images/06.jpg");
+    background-image: url("../images/img06.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(7){
-    background-image: url("../images/07.jpg");
+    background-image: url("../images/img01.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(8){
-    background-image: url("../images/08.jpg");
+    background-image: url("../images/img02.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(9){
-    background-image: url("../images/09.jpg");
+    background-image: url("../images/img03.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(10){
-    background-image: url("../images/10.jpg");
+    background-image: url("../images/img04.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(11){
-    background-image: url("../images/11.jpg");
+    background-image: url("../images/img05.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(12){
-    background-image: url("../images/12.jpg");
+    background-image: url("../images/img06.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(13){
-    background-image: url("../images/13.jpg");
+    background-image: url("../images/img01.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(14){
-    background-image: url("../images/14.jpg");
+    background-image: url("../images/img02.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(15){
-    background-image: url("../images/15.jpg");
+    background-image: url("../images/img03.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(16){
-    background-image: url("../images/16.jpg");
+    background-image: url("../images/img04.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(17){
-    background-image: url("../images/17.jpg");
+    background-image: url("../images/img05.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(18){
-    background-image: url("../images/18.jpg");
+    background-image: url("../images/img06.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(19){
-    background-image: url("../images/19.jpg");
+    background-image: url("../images/img01.jpg");
     position: center;
     background-size: 100%;
   }
 
   &:nth-child(20){
-    background-image: url("../images/20.jpg");
+    background-image: url("../images/img02.jpg");
     position: center;
     background-size: 100%;
   }
