--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -2,6 +2,6 @@
 	--primary-color: #000000;
 	--secondary-color: #FFFFFF;
 	--tertiary-color: #FF5D73;
-	--title-font: 'Roboto Mono', monospace;
-	--copy-font: 'Roboto', sans-serif;
+	--title-font: 'Franklin Gothic', monospace;
+	--copy-font: 'Franklin Gothic', sans-serif;
 }
