--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -1,7 +1,7 @@
 .modal {
 	opacity: 0;
 	pointer-events: none;
-	background-color: rgba(0, 0, 0, .8);
+	background-color: rgba(0, 0, 0, .9);
 	position: fixed;
 	height: 100vh;
 	width: 100vw;
@@ -21,5 +21,33 @@
 		transform: translate(-50%, -50%);
 		top: 50%;
 		left: 50%;
+	}
+}
+
+.modal-close {
+	position: absolute;
+	height: 30px;
+	width: 30px;
+	top: 20px;
+	right: 20px;
+	cursor: pointer;
+
+	&:before,
+	&:after {
+		position: absolute;
+		content: '';
+		top: 0;
+		right: 15px;
+		width: 3px;
+		height: 30px;
+		background-color: var(--secondary-color);
+	}
+
+	&:before {
+		transform: rotate(45deg);
+	}
+
+	&:after {
+		transform: rotate(-45deg);
 	}
 }
