--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 :root {
-	--primary-color: #000000;
-	--secondary-color: #FFFFFF;
-	--tertiary-color: #FF5D73;
-	--title-font: 'Roboto Mono', monospace;
-	--copy-font: 'Roboto', sans-serif;
+	--primary-color: #C493B0;
+	--secondary-color: #ffffff;
+	--tertiary-color: #70163C;
+	--title-font: 'Lato', sans-serif;
+	--copy-font: 'Playfair Display', serif;
 }
