--- a/stylesheets/_gallery.scss
+++ b/stylesheets/_gallery.scss
@@ -1,20 +1,27 @@
 .gallery {
     //gallery css goes here
-   display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
 
     &__item {
         width: calc(25% - 12px);
-        background-color: var(--tertiary-color);
+        flex: 0 0 auto;
         margin-bottom: 13px;
-        background-size: cover;
+        background-size: 100%;
+        background-repeat: no-repeat;
         background-position: center;
-        -webkit-filter: grayscale(90%);
-        filter: grayscale(90%);
+        filter: grayscale(100%);
+        transition: all .2s ease-in-out;
+        overflow: hidden;
+        cursor: pointer;
+
+        &:hover {
+            filter: grayscale(0);
+            background-size: 102%;
+        }
 
         &:nth-child(1) {
-            background-image: url("../images/01.jpg"); 
+            background-image: url("../images/07.jpg"); 
         }
         &:nth-child(2) {
             background-image: url("../images/02.jpg");
