--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,8 @@
 :root {
 	--primary-color: #000000;
 	--secondary-color: #FFFFFF;
-	--tertiary-color: #FF5D73;
-	--title-font: 'Roboto Mono', monospace;
-	--copy-font: 'Roboto', sans-serif;
+	--tertiary-color: lightsalmon;
+	--title-font: 'Playfair Display', serif;
+	--copy-font: 'Montserrat', sans-serif;
+
 }
