--- a/style.scss
+++ b/style.scss
@@ -4,3 +4,5 @@
 @import 'stylesheets/page-title';
 @import 'stylesheets/description';
 @import 'stylesheets/gallery';
+@import 'stylesheets/modal';
+@import 'stylesheets/mobile';
