--- a/style.scss
+++ b/style.scss
@@ -3,4 +3,6 @@
 @import 'stylesheets/base';
 @import 'stylesheets/page-title';
 @import 'stylesheets/description';
+@import 'stylesheets/mixins';
 @import 'stylesheets/gallery';
+@import 'stylesheets/modal';
