--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 :root {
 	--primary-color: #000000;
 	--secondary-color: #FFFFFF;
-	--tertiary-color: #FF5D73;
-	--title-font: 'Roboto Mono', monospace;
-	--copy-font: 'Roboto', sans-serif;
+	--tertiary-color: rgb(79, 107, 2);
+	--title-font: 'Homemade Apple', cursive;
+	--copy-font: 'Homemade Apple', cursive;
 }
