--- a/stylesheets/_mixins.scss
+++ b/stylesheets/_mixins.scss
@@ -1,11 +1,11 @@
-@mixin unaimage {
-    @media (max-width: 500px) {
-        @content;
-    }
+@mixin tablet {
+  @media (max-width: 850px) {
+    @content;
+  }
 }
 
-@mixin dosimages {
-    @media (min-width: 501px) and (max-width: 850px) {
-        @content;
-    }
+@mixin mobile {
+  @media (max-width: 500px) {
+    @content;
+  }
 }
