--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 @import 'stylesheets/reset';
 @import 'stylesheets/variables';
+@import 'stylesheets/mixins';
 @import 'stylesheets/base';
 @import 'stylesheets/page-title';
 @import 'stylesheets/description';
