--- a/stylesheets/_gallery.scss
+++ b/stylesheets/_gallery.scss
@@ -14,6 +14,17 @@
 		filter: saturate(100%);
 		cursor: pointer;
 
+		@include twoimages {
+			flex-wrap: wrap;
+			width: calc(50% - 6px);
+		}
+
+		@include oneimage {
+			width: calc(100% - 6px);
+			flex-wrap: wrap;
+			justify-content: center;
+		}
+
 		&:nth-child(1) {
 			background-image: url("../images/01.jpg");
 			filter: grayscale(5%);
