--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -1,12 +1,13 @@
 .modal {
     opacity: 0;
     pointer-events: none;
-    background-color: var(--main-color);
+    background-color: rgba(0, 0, 0, 0.6);
     position: fixed;
     height: 100vh;
     width: 100vw;
     top: 0;
     left: 0;
+    transition: opacity .2s ease-in-out;
 
     &--open {
         opacity: 1;
@@ -15,11 +16,96 @@
 
     &__image {
         position: absolute;
-        width: 90%;
-        max-width: 600px;
+        width: calc(100% - 80px);
+        max-width: 900px;
         height: auto;
         transform: translate(-50%, -50%);
         top: 50%;
         left: 50%;
+    }
+}
+
+.modal-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+
+
+    &:before,
+    &:after {
+        position: absolute;
+        content: '';
+        top: 0;
+        width: 3px;
+        height: 30px;
+        background-color: var(--secondary-color);
+    }
+
+    &:before {
+        transform: rotate(45deg);
+    }
+
+    &:after {
+        transform: rotate(-45deg);
+
+    }
+} 
+
+.next-button,
+.previous-button {
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+
+    &:before,
+    &:after {
+        position: absolute;
+        content: '';
+        width: 3px;
+        height: 30px;
+        background-color: var(--secondary-color);
+    }
+
+    &.no-link {
+        opacity: 0.2;
+        pointer-events: none;
+    }
+}
+
+.next-button {
+    right: 60px;
+
+    &:before {
+        transform: rotate(45deg);
+        right: 5px;
+        top: 19px;
+    }
+
+    &:after {
+        transform: rotate(-45deg);
+        right: 5px;
+        top: 0;
+    }
+}
+
+.previous-button {
+    left: 60px;
+
+    &:before {
+        transform: rotate(-45deg);
+        right: 12px;
+        top: 19px;
+    }
+
+    &:after {
+        transform: rotate(45deg);
+        right: 12px;
+        top: 0;
     }
 }
