--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,8 +1,7 @@
 :root {
 	--primary-color: #000000;
 	--secondary-color: #FFFFFF;
-	--tertiary-color: lightsalmon;
-	--title-font: 'Playfair Display', serif;
-	--copy-font: 'Montserrat', sans-serif;
-
+	--tertiary-color: #FF5D73;
+	--title-font: 'Roboto Mono', monospace;
+	--copy-font: 'Roboto', sans-serif;
 }
