--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -9,6 +9,7 @@
     width: 100vw;
     top: 0;
     left: 0;
+    transition: opacity .2s ease-in-out;
 
     &--open {
         opacity: 1;
@@ -17,12 +18,98 @@
 
     &__image {
         position: absolute;
-        width: 90%;
-        max-width: 600px;
+        width: calc(100%-80px);
+        max-width: 900px;
         height: auto;
         transform: translate(-50%, -50%);
         top: 50%;
         left: 50%;
 
+    }
+}
+
+.modal-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+
+    &:before,
+    &:after {
+        position: absolute;
+        background-color: white;
+        content: '';
+        top: 0;
+        right: 15px;
+        width: 3px;
+        height: 30px;
+    }
+
+    &:before {
+        transform: rotate(45deg);
+    }
+
+    &:after {
+        transform: rotate(-45deg);
+    }
+}
+
+
+
+.next-button, 
+.prev-button {
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+
+    &:before,
+    &:after {
+        position: absolute;
+        content: '';
+        width: 3px;
+        height: 20px;
+        background-color: var(--secondary-color);
+    }
+
+    &.no-link {
+        opacity: 2;
+        pointer-events: none;
+    }
+}
+
+.next-button {
+    right: 10px;
+
+    &:before {
+        transform: rotate(45deg);
+        right: 15px;
+        top: 12px;
+    }
+
+    &:after {
+        transform: rotate(-45deg);
+        right: 15px;
+        top: 0;
+    }
+}
+
+.prev-button {
+    left: 10px;
+
+    &:before {
+        transform: rotate(-45deg);
+        right: 15px;
+        top: 12px;
+    }
+
+    &:after {
+        transform: rotate(45deg);
+        right: 15px;
+        top: 0;
     }
 }
