--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,8 +1,7 @@
 :root {
-	--primary-color: #000000;
-	--secondary-color: #FFFFFF;
-	--tertiary-color: lightsalmon;
-	--title-font: 'Playfair Display', serif;
-	--copy-font: 'Montserrat', sans-serif;
-
+	--primary-color: #C493B0;
+	--secondary-color: #ffffff;
+	--tertiary-color: #70163C;
+	--title-font: 'Lato', sans-serif;
+	--copy-font: 'Playfair Display', serif;
 }
