--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -1,9 +1,8 @@
 * {font-family: 'Lato', sans-serif;}
-
 .modal {
     opacity: 0;
     pointer-events: none;
-    background-color: rgba(0, 0, 0, .8);
+    background-color: rgba(0, 0, 0, 0.4);
     position: fixed;
     height: 100vh;
     width: 100vw;
@@ -23,6 +22,5 @@
         transform: translate(-50%, -50%);
         top: 50%;
         left: 50%;
-
     }
 }
