--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 :root {
-	--primary-color: #000000;
-	--secondary-color: #FFFFFF;
-	--tertiary-color: #FF5D73;
-	--title-font: 'Roboto Mono', monospace;
+	--primary-color: rgb(3, 16, 51);
+	--secondary-color: rgba(255, 255, 255, 0.9);
+	--tertiary-color: rgb(105, 40, 179);
+	--title-font: "Trebuchet MS", Arial, sans-serif;
 	--copy-font: 'Roboto', sans-serif;
 }
