--- a/style.scss
+++ b/style.scss
@@ -8,3 +8,4 @@
 @import 'stylesheets/modal';
 @import 'stylesheets/container-small';
 @import 'stylesheets/container-tiny';
+@import 'stylesheets/body';
