--- a/stylesheets/_page-title.scss
+++ b/stylesheets/_page-title.scss
@@ -11,7 +11,7 @@
 		bottom: 3px;
 		height: 18px;
 		width: 100%;
-		background-color: var(--main-color);
+		background-color: var(--gallery-color);
 		content: '';
 		z-index: -1;
 	}
