--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -3,6 +3,7 @@
 	--secondary-color: #FFFFFF;
 	--tertiary-color: #FF5D73;
 	--main-color: #3C72A0;
-	--gallery-color: #D6F4FF;
+	--gallery-color: #b7d2ff;
+	--background-color: #001f51; 
 	--title-font: 'Cormorant Garamond', serif;
 }
