--- a/stylesheets/_gallery.scss
+++ b/stylesheets/_gallery.scss
@@ -8,7 +8,7 @@
 		width: calc(25% - 12px);
 		background-size: 100%;
 		transition: all .2s ease-in-out;
-		background-color: var(--tertiary-color);
+		background-color: var(--background-color);
 		background-position: center;
 		margin-bottom: 13px;
 		filter: saturate(100%);
