--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -41,7 +41,7 @@
         top: 0;
         width: 3px;
         height: 30px;
-        background-color: var(--secondary-color);
+        background-color: var(--background-color);
     }
 
     &:before {
