--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 :root {
-	--primary-color: #000000;
+	--primary-color: #a3c6e0;
 	--secondary-color: #FFFFFF;
-	--tertiary-color: #FF5D73;
-	--title-font: 'Roboto Mono', monospace;
-	--copy-font: 'Roboto', sans-serif;
+	--tertiary-color: rgb(255, 223, 116);
+	--title-font: 'Arial', sans-serif;
+	--copy-font: 'Arial', sans-serif;
 }
