--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -1,7 +1,7 @@
 .modal {
 	opacity: 0;
 	pointer-events: none;
-	background-color: rgba(0, 0, 0, .8);
+	background-color: #a3c6e0;
 	position: fixed;
 	height: 100vh;
 	width: 100vw;
