--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -39,6 +39,7 @@
         position: absolute;
         content: '';
         top: 0;
+        left: 14px;
         width: 3px;
         height: 30px;
         background-color: var(--secondary-color);
