--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,11 @@
 :root {
-	--primary-color: #000000;
-	--secondary-color: #FFFFFF;
-	--tertiary-color: #FF5D73;
+	--primary-color: #003D56;
+	--secondary-color: #FFF3DB;
+	--tertiary-color: #5DFF5D;
 	--title-font: 'Franklin Gothic', monospace;
 	--copy-font: 'Franklin Gothic', sans-serif;
 }
+
+// --primary-color: #003D56;
+// --secondary-color: #FFF3DB;
+// --tertiary-color: #5DFF5D;
