--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 :root {
-	--primary-color: #000000;
+	--primary-color: #1d331d;
 	--secondary-color: #FFFFFF;
-	--tertiary-color: #FF5D73;
-	--title-font: 'Roboto Mono', monospace;
-	--copy-font: 'Roboto', sans-serif;
+	--tertiary-color: rgb(108, 194, 97);
+	--title-font: 'Futura', monospace;
+	--copy-font: 'Georgia', serif;
 }
