--- a/stylesheets/_gallery.scss
+++ b/stylesheets/_gallery.scss
@@ -1,12 +1,19 @@
 .gallery {
 	display: flex;
-	flex-wrap: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 
 	&__item {
 		width: calc(25% - 12px);
 		background-color: var(--tertiary-color);
 		margin-bottom: 13px;
+		filter: grayscale(1);
+		cursor: pointer;
+
+		&:hover {
+			filter: grayscale(0);
+			background-size: 102%;
+		}
 
 		&:nth-child(1) {
 			background-image: url("../images/01.jpg");
@@ -113,4 +120,6 @@
 				padding-bottom: 56.25%;
 			}
 		}
+
+		
 }
