--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,8 @@
 :root {
-	--primary-color: #000000;
-	--secondary-color: #FFFFFF;
+	--primary-color: #FFFFFF;
+	--secondary-color:#FFFFFF ;
 	--tertiary-color: #FF5D73;
-	--title-font: 'Roboto Mono', monospace;
-	--copy-font: 'Roboto', sans-serif;
+	--title-font: 'Teko', sans-serif;
+
+	--copy-font: 'Teko', sans-serif;
 }
