--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -40,6 +40,7 @@
     position: absolute;
     content: '';
     top: 0;
+    left: 13px;
     width: 3px;
     height: 30px;
     background-color: var(--secondary-color);
