--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 :root {
-	--primary-color: #000000;
-	--secondary-color: #FFFFFF;
-	--tertiary-color: #FF5D73;
-	--title-font: 'Roboto Mono', monospace;
-	--copy-font: 'Roboto', sans-serif;
+	--primary-color: #ffffff;
+	--secondary-color: rgb(248, 185, 185);
+	--tertiary-color: rgb(181, 245, 253);
+	--title-font: 'Futura';
+	--copy-font: 'Futura';
 }
