--- a/stylesheets/_gallery.scss
+++ b/stylesheets/_gallery.scss
@@ -8,7 +8,7 @@
   width: calc(25% - 12px);
   background-color: var(--tertiary-color);
   margin-bottom: 12px;
-  filter: grayscale(100%);
+  filter: grayscale(100%) blur(3px);
   transition: all .2s ease-in-out;
   overflow: hidden;
   cursor: pointer;
@@ -22,7 +22,7 @@
   }
 
   &:hover {
-    filter: grayscale(0);
+    filter: grayscale(0) blur(0);
     background-size: 102%;
   }
 
