--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 :root {
-	--primary-color: #C493B0;
+	--primary-color: rgb(103, 121, 224);
 	--secondary-color: #ffffff;
-	--tertiary-color: #70163C;
-	--title-font: 'Lato', sans-serif;
-	--copy-font: 'Playfair Display', serif;
+	--tertiary-color: rgb(0, 60, 255);
+	--title-font: 'Poppins', sans-serif;
+	--copy-font: 'Open Sans', sans-serif;
 }
