--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -3,5 +3,6 @@
 	--secondary-color: #ffffff;
 	--tertiary-color: rgb(0, 60, 255);
 	--title-font: 'Poppins', sans-serif;
-	--copy-font: 'Open Sans', sans-serif;
+	--copy-font: 'Dosis', sans-serif;
+
 }
