--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 :root {
-	--primary-color: rgb(103, 121, 224);
+	--primary-color: royalblue;
 	--secondary-color: #ffffff;
-	--tertiary-color: rgb(0, 60, 255);
+	--tertiary-color: #03acc2;
 	--title-font: 'Poppins', sans-serif;
 	--copy-font: 'Dosis', sans-serif;
 
