--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,8 @@
 :root {
-	--primary-color: #000000;
+	--primary-color: #ffb53c;
 	--secondary-color: #FFFFFF;
-	--tertiary-color: #FF5D73;
-	--title-font: 'Roboto Mono', monospace;
-	--copy-font: 'Roboto', sans-serif;
+	--tertiary-color: #FB5332;
+	--title-font:  'Slabo 27px', serif;
+	--copy-font:  'Slabo 27px', serif;
+	
 }
