--- a/stylesheets/_gallery.scss
+++ b/stylesheets/_gallery.scss
@@ -1,4 +1,5 @@
 .gallery {
+	
 	//gallery CSS goes here
 	display: flex;
 	flex-wrap: wrap;
@@ -12,7 +13,7 @@
 		background-size: 100%;
 		background-repeat: no-repeat;
 		background-position: center;
-		filter: grayscale(100%);
+		filter:grayscale(0);
 		transition: filter .2s ease-in-out, background-size .2s ease-in-out;
 		overflow:hidden;
 		cursor: pointer;
@@ -26,7 +27,7 @@
 		}
 
 		&:hover {
-			filter:grayscale(0);
+			filter:saturate(300%);
 			background-size: 102%;
 		}
 
@@ -138,3 +139,5 @@
 		}
 	}
 }
+
+  
