--- a/stylesheets/_gallery.scss
+++ b/stylesheets/_gallery.scss
@@ -10,6 +10,14 @@
 		cursor: pointer;
 		filter: grayscale(1);
 
+		@include tablet {
+			width: calc(50% - 6px);
+		}
+
+		@include mobile {
+			width: 100%;
+		}
+
 		&:hover {
 			filter:grayscale(0);
 		}
