--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -7,6 +7,7 @@
     width:100vw;
     top: 0;
     left: 0;
+    transition: opacity .2s ease-in-out;
 
 
     &--open {
@@ -16,11 +17,92 @@
 
     &--image {
         position: absolute;
-        width: 90%;
-        max-width: 600px;
+        width: calc(100%-800x);
+        max-width: 900px;
         height: auto;
         transform:translate(-50%, -50%);
         top: 50%;
         left: 50%;
+    }
+}
+
+.modal-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+
+
+    &:before,
+    &:after {
+        position: absolute;
+        content: '';
+        top: 0;
+        right: 15px;
+        width: 3px;
+        height: 30px;
+        background-color: var(--secondary-color);
+    }
+
+    &:before {
+        transform: rotate(45deg);
+    }
+
+    &:after {
+        transform: rotate(-45deg);
+    }
+}
+
+.next-button,
+.prev-button {
+    position: absolute;
+    height: 30px;
+    widows: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+
+    &:before,
+    &:after {
+        position: absolute;
+        content: '';
+        width:3px;
+        height:20px;
+        background-color: var(--secondary-color);
+    }
+}
+
+
+
+.next-button {
+    right: 10px;
+
+    &:before {
+        transform: rotate(45deg);
+        right: 15px;
+        top:12px;
+    }
+
+    &:after {
+        transform: rotate(-45deg);
+        right: 15px;
+        top:0px;
+    }
+}
+
+.prev-button {
+    left: 35px;
+    &:before {
+        transform: rotate(-45deg);
+        right: 15px;
+        top: 12px;
+    }
+
+    &:after {
+        transform: rotate(45deg);
+        right: 15px;
+        top:0px;
     }
 }
