--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 :root {
-	--primary-color: #000000;
+	--primary-color: #6f4e37;
 	--secondary-color: #FFFFFF;
-	--tertiary-color: #FF5D73;
-	--title-font: 'Roboto Mono', monospace;
-	--copy-font: 'Roboto', sans-serif;
+	--tertiary-color: #6a835b;
+	--title-font: 'Montserrat';
+	--copy-font: 'Montserrat';
 }
