--- a/style.scss
+++ b/style.scss
@@ -6,3 +6,8 @@
 @import 'stylesheets/description';
 @import 'stylesheets/gallery';
 @import 'stylesheets/modal';
+@import 'stylesheets/ocean-gallery';
+@import 'stylesheets/flower-gallery';
+@import 'stylesheets/cloud-gallery';
+@import 'stylesheets/home';
+@import 'stylesheets/navigation';
