--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -4,6 +4,11 @@ body {
 	font-size: 10px;
 }
 
+a{
+	text-decoration: none;
+	color: #0f2a54;
+}
+
 .container {
 	display: flex;
 	max-width: 1280px;
