--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,8 +1,8 @@
 :root {
-	--primary-color: #000000;
-	--secondary-color: #FFFFFF;
-	--tertiary-color: #FF5D73;
-	--title-font:   font-family: 'Poiret One', cursive;
-	--copy-font:   font-family: 'Poiret One', cursive;
-
+	--primary-color: #fff7b2;
+	--secondary-color: #bccbf4;
+	--tertiary-color: #ffd8f4;
+	--quaternary-color: #c0e2bc;
+	--title-font:  'Poiret One', cursive;
+	--copy-font:  'Poiret One', cursive;
 }
